samples/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - example.workshop.uf-ace.com
      secretName: home-tls
  rules:
    - host: example.workshop.uf-ace.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: 80
